<resources>
    <string name="app_name">RADAR UFPA</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="tipo_pontos_array">
        <item>Bebedouro</item>
        <item>Banheiro Feminino</item>
        <item>Banheiro Masculino</item>
        <item>Ponto de Acessibilidade</item>
    </string-array>

    <string-array name="tipo_usuario_array">
        <item>Estudante</item>
        <item>Professor</item>
        <item>Servidor</item>
        <item>Visitante</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">414416822252416</string>
    <string name="title_activity_login">RadarUFPA</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_birth">Data de Nascimento</string>
    <string name="prompt_tipo">Tipo</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_register">Registre-se Aqui</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Este email é inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta, use no mínimo 6 caracteres</string>
    <string name="error_invalid_name">Esse nome é muito curto</string>
    <string name="error_invalid_date">Essa data não é válida. Você deve ter ao menos 16 anos</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="post_marker_explanation"> Indica a quantidade de postagens realizada pela conta </string>
    <string name="post_solved_marker_explanation"> Indica a quantidade de problemas apresentados que foram devidamente resolvidos </string>

    <string name="SharedPreferences">RadarUFPAPreferences</string>
    <string name="standard_answer"> A sua solicitação ainda não foi visualizada</string>
    <string name="solved_answer"> A sua solicitação ainda não foi visualizada</string>
    <string name="listed_answer"> A sua solicitação ainda não foi visualizada</string>
    <string name="closed_answer"> A sua solicitação ainda não foi visualizada</string>
</resources>
